Fix inconsistent sidebar sizing due to scrollbars with viewport units for desktop only (#182)

--- a/static/stylesheet/style.less
+++ b/static/stylesheet/style.less
@@ -484,8 +484,8 @@ ul.social {
 
 @media screen and (min-width: 768px) {
   aside {
-    width: 25%;
-    height: 100%;
+    width: 25vw;
+    height: 100vh;
     position: fixed;
     top: 0;
     left: 0;
@@ -510,16 +510,17 @@ ul.social {
   }
 
   main {
-    width: 75%;
-    height: 100%;
+    width: 75vw;
+    height: 100vh;
     position: absolute;
     top: 0;
-    left: 25%;
+    left: 25vw;
+    overflow-x: hidden;
 
     article {
 
       &.single {
-        min-height: 80%;
+        min-height: 80vh;
       }
 
       ul.list {
